--- a/lab06/style.css
+++ b/lab06/style.css
@@ -1,88 +1,95 @@
 .container {
-    background-color: rgb(186, 37, 37);
-    padding: 10px;
-    margin: 10px;
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 3%;
 }
 
-.some-page-wrapper {
-    background-color: rgb(81, 4, 4);
-    padding: 10px;
-    margin: 10px;
-}
-
-.row {
-    background-color: rgb(172, 49, 49);
-    padding: 10px;
-    margin: 10px;
-}
-
-.column {
-    background-color: rgb(231, 22, 64);
-    padding: 10px;
-    margin: 10px;
+.same-page-wrapper {
+  margin: 100px;
 }
 
 .blue-column {
-    background-color: rgb(164, 24, 24);
-    padding: 10px;
-    margin: 10px;
+  background-color: rgb(43, 190, 248);
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 15px;
+  border: 2px solid black;
+  background-color: rgb(96, 162, 255);
+  height: 300px;
 }
 
-.green-column {
-    background-color: rgb(164, 24, 24);
-    padding: 10px;
-    margin: 10px;
+.purple-column {
+  background-color: rgb(163, 168, 249);
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 15px;
+  border: 2px solid black;
+  background-color: rgb(96, 162, 255);
+  height: 300px;
 }
-.section p {
-    background-color: rgb(164, 24, 24);
-    padding: 10px;
-    margin: 10px;
-}
+
 .section h2 {
-    background-color: rgb(222, 58, 69);
-    padding: 10px;
-    margin: 10px;
+  background-color: rgb(43, 190, 248);
+  padding: 10px;
+  margin: 10px;
 }
 
-
-.section2 p {
-    background-color:rgb(151, 96, 102);
-    padding: 10px;
-    margin: 10px;
+.section p {
+  background-color: rgb(179, 183, 233);
+  padding: 10px;
+  margin: 10px;
 }
 
-@media only screen and (max-width: 767px) {
-    body {
-      font-size: 14px;
-      background-color: #e68019;
-    }
-  
+.section {
+  border: 2px solid black;
+  margin-bottom: 20px;
+  padding: 20px;
+  font-family: 'Times New Roman', Times, serif;
+  margin-top: 15px;
+  background-color: rgb(96, 162, 255);
 }
-    
-    body {
-      background-color: #f6a97d; 
-    }
-  
- 
-  @media only screen and (min-width: 1025px) {
-    body {
-      font-size: 16px;
-      background-color: #ebeb13; 
-    }
+
+a:link {
+  color: rgb(14, 236, 22);
+}
+
+a:visited {
+  color: purple;
+}
+
+a:hover {
+  color: red;
+  text-decoration: underline;
+}
+
+@media (min-width: 768px) {
+  .row {
+    display: flex;
   }
-  
-  @media only screen and (min-width: 768px) and (max-width: 1024px) {
-    .container {
-      display: flex;
-      flex-wrap: wrap;
-    }
-    
-    .column {
-      width: 50%;
-    }
-    .column {
-      flex: 3; 
-      margin: 30px;
-    }
+
+  .column {
+    flex: 1;
   }
-  
+
+  body {
+    background-color: #d4dded;
+  }
+}
+
+@media (max-width: 767px) {
+  .row {
+    display: block;
+  }
+
+  .column {
+    width: 100%;
+  }
+
+  body {
+    background-color: rgb(163, 168, 249);
+  }
+}
+
+@media (max-width: 600px) {
+  body {
+    background-color: rgb(143, 122, 221);
+  }
+}
